Kubernetes/Nextcloud/next.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
spec:
  selector:
    matchLabels:
      app: nextcloud-db
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      containers:
      - name: mariadb
        image: mariadb
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: nextcloud-db-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-app
spec:
  selector:
    matchLabels:
      app: nextcloud-app
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud-app
    spec:
      containers:
      - name: nextcloud
        image: nextcloud
        volumeMounts:
        - name: nextcloud-persistent-storage
          mountPath: /var/www/html
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
      volumes:
      - name: nextcloud-persistent-storage
        persistentVolumeClaim:
          claimName: nextcloud-app-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: nextcloud-db
  ports:
    - protocol: TCP
      port: 3306  # Port MySQL par défaut
      targetPort: 3306
